--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+ body{
+   background-color: #444;
+   color: white;
+   margin: 20px;
+   font: 32px "sans-serif";
+ }
+ .game{
+   display:flex ;
+   flex-direction: column;
+   align-items: center;
+ }
+ .row{
+   display: flex;
+   flex-flow: row nowrap;
+ }
+ .squre{
+   background-color: #444;
+   color: white;
+   border: 1px solid orangered;
+   padding: 0;
+   font-size: 84px;
+   text-align: center;
+   width: 100px;
+   height: 100px;
+ }
+ .squre:focus{
+   outline: black;
+   background-color: black;
+ }
